[tool.poetry]
name = "cachify"
version = "0.1.0"
description = "A simple caching library with sync/async support, Memory and Redis backend"
license = "MIT"
readme = "README.md"
packages = [{ include = "cachify" }]
authors = ["dynalz <git@pulsar.finance>"]
repository = "https://github.com/PulsarDataSolutions/caching"
homepage = "https://github.com/PulsarDataSolutions/caching"
keywords = ["cache", "caching", "redis", "async", "decorator", "memoization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.scripts]
shell = "scripts.shell:shell"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
redis = {extras = ["hiredis"], version = ">5.0.0"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
ipython = "^8.37.0"
pytest-asyncio = "^0.26.0"
typing-extensions = "^4.12.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
